Panda Ecommerce coding done

--- a/index.html
+++ b/index.html
@@ -12,5 +12,289 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
     <title>Panda Ecommerce</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"
+          ><img src="images/logo.png" alt="logo.png"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#shoes">Shoes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Backpack">Backpack</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Subscribe">Subscribe</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <!--Start Carousel-->
+    <div class="container">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide orange_bg"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h2>
+                  Samsung Class J5205 Full LED Smart TV.
+                </h2>
+                <p>
+                  Enjoy the best full HD Viewing Experience Enjoy Easier and
+                  Faster Access to Your Favorite Media and Entertainment.
+                </p>
+                <h2 class="price">$1200</h2>
+                <button class="buy_now_button">BUY NOW>></button>
+              </div>
+              <div class="col-md-5">
+                <img src="images/tv.png" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h2>
+                  JBL T450BT Wireless On-Ear Headphones with Built-in Remote and
+                  Microphone.
+                </h2>
+                <p>
+                  Frequency Response - 80 – 18,000 Hz and Impedance - 16 ohms.
+                </p>
+                <h2 class="price">$44.95</h2>
+                <button class="buy_now_button">BUY NOW>></button>
+              </div>
+              <div class="col-md-5">
+                <img
+                  src="images/headphone.png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h2>
+                  Microsoft Xbox One S 1Tb Console - White.
+                </h2>
+                <p>
+                  Watch 4K Blue ray movies and stream 4K content on Netflix and
+                  Amazon video Experience richer, more luminous colors in games
+                  and video with high dynamic range Play over 100 console
+                  exclusives and a growing library of Xbox 360 games on Xbox On.
+                </p>
+                <h2 class="price">$309.99</h2>
+                <button class="buy_now_button">BUY NOW>></button>
+              </div>
+              <div class="col-md-5">
+                <img src="images/xbox.png" class="d-block w-100" alt="..." />
+              </div>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <!--End Carousel-->
+    <!--Start Bag Shoe Watch-->
+    <div class="container categories">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="cat_1 d-flex justify-content-between align-items-center">
+            <h1>Watch</h1>
+            <img src="images/watch.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat_2 d-flex justify-content-between align-items-center">
+            <h1>Bag</h1>
+            <img src="images/bag.png" alt="" />
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="cat_3 d-flex justify-content-between align-items-center">
+            <h1>Shoes</h1>
+            <img src="images/shoes.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--End Bag Shoe Watch-->
+
+    <!--Start Shoes Card-->
+    <div class="container shoes" id="shoes">
+      <h1 class="font-weight-bold">Shoes</h1>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/shoe-1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Suppply 350</h5>
+            <p class="card-text">
+              Driven by a relentless pursuit of innovation as well as decades of
+              accumulating sports science expertise, we cater for all, from
+              elite professional athletes and teams to any individual who wants
+              to able sport part of their lives.
+            </p>
+            <h2 class="price font-weight-bold">$120</h2>
+            <button class="buy_now_button">BUY NOW>></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoe-2.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Nike 320</h5>
+            <p class="card-text">
+              Mesh TPU overlays provide targeted support for a snug, secure fit.
+              Breathable mesh in the upper for ventilation and cooling.` Phylon
+              midsole in the forefoot for lightweight cushioning. Visible Max
+              Air unit under the heel maximizes cushioning.
+            </p>
+            <h2 class="price font-weight-bold">$320</h2>
+            <button class="buy_now_button">BUY NOW>></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoe-3.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Red Air Max</h5>
+            <p class="card-text">
+              Mesh TPU overlays provide targeted support for a snug, secure fit.
+              Breathable mesh in the upper for ventilation and cooling.` Phylon
+              midsole in the forefoot for lightweight cushioning. Visible Max
+              Air unit under the heel maximizes cushioning.
+            </p>
+            <h2 class="price font-weight-bold">$350</h2>
+            <button class="buy_now_button">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--End Shoes Card-->
+
+    <!-- Start Backpack Card-->
+    <div class="container" id="Backpack">
+      <h1 class="font-weight-bold">Backpack</h1>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/bag-1.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Red Bag</h5>
+            <h2 class="price font-weight-bold">$120</h2>
+            <p class="card-text">
+              This is a wider card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+          </div>
+          <div class="card-footer">
+            <button class="buy_now_button">BUY NOW>></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bag-2.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Blue Bag</h5>
+            <h2 class="price font-weight-bold">$350</h2>
+            <p class="card-text">
+              This card has supporting text below as a natural lead-in to
+              additional content.
+            </p>
+          </div>
+          <div class="card-footer">
+            <button class="buy_now_button">BUY NOW>></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bag-3.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Black Bag</h5>
+            <h2 class="price font-weight-bold">$169</h2>
+            <p class="card-text">
+              This is a wider card with supporting text below as a natural
+              lead-in to additional content. This card has even longer content
+              than the first to show that equal height action.
+            </p>
+          </div>
+          <div class="card-footer">
+            <button class="buy_now_button">BUY NOW>></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Start Backpack Card-->
+    <!--Start Subscriber Option-->
+    <div
+      class="container d-flex align-items-center orange_bg d-flex justify-content-center"
+      id="Subscribe"
+    >
+      <div>
+        <h3>Let's Stay In Touch</h3>
+        <h6>Gates updates on sales, specialis and more</h6>
+        <input class="form-control" type="text" />
+        <button class="buy_now_button">Submit</button>
+      </div>
+    </div>
+    <!--Start Subscriber Option-->
+    <footer>
+      <small>©Panda Ecommerce. All rights resrved.</small>
+    </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
